<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:fontFamily="serif-monospace"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="42dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="14dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/address"
        android:layout_width="285dp"
        android:layout_height="47dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/uname"
        android:inputType="text|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/login_confirm"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="53dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="53dp"
        android:layout_marginStart="15dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_login" />

    <Button
        android:id="@+id/cancel_login"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="53dp"
        android:onClick="goToMainActivity"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_confirm"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

</android.support.constraint.ConstraintLayout>