<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.survivrrdev.survivrr.SignUpActivity3">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="219dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:text="@string/blood_type"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="97dp"
        android:layout_height="47dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginTop="32dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="238dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/med_cond"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allergies" />

    <EditText
        android:id="@+id/allergies"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="191dp"
        android:layout_height="47dp"
        android:layout_marginEnd="152dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="152dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/allergy"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/allergies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/medConditions"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:onClick="gotoSignUpActivity4"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/medConditions"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:onClick="gotoSignUpActivity2"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medConditions" />

</android.support.constraint.ConstraintLayout>
