<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPWPrompt">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="219dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="131dp"
        android:layout_height="47dp"
        android:layout_marginEnd="213dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="213dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/uname"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/address"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginEnd="210dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="210dp"
        android:layout_height="47dp"
        android:layout_marginEnd="134dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="134dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/confirm_pw"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/button"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="27dp"
        android:onClick="goToLoginActivity"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:onClick="gotoSignUpActivity4"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

</android.support.constraint.ConstraintLayout>