<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/AppTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="275dp"
        android:layout_height="83dp"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal|center"
        android:text="@string/app_name"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="215dp"
        android:layout_height="69dp"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:onClick="gotoLoginActivity"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="215dp"
        android:layout_height="69dp"
        android:layout_marginBottom="69dp"
        android:layout_marginTop="5dp"
        android:text="@string/signup"
        android:onClick="gotoSignUpActivity1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</android.support.constraint.ConstraintLayout>